# open-design

./: .gitignore  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/workflows/: agent-pr-explore.lock.yml  backport-automerge.yml  backport.yml  ci.yml  finalize-release.yml  landing-page-ci.yml
apps/daemon/: package.json
apps/desktop/: package.json
apps/landing-page/: package.json
apps/launcher/: AGENTS.md  Cargo.toml
apps/launcher/crates/launcher-core/src/: lib.rs
apps/launcher/crates/launcher-lifecycle/: Cargo.toml
apps/launcher/crates/launcher-lifecycle/src/: lib.rs
apps/launcher/crates/launcher-lifecycle/tests/: lifecycle.rs
apps/launcher/crates/launcher-platform/src/: lib.rs
apps/launcher/crates/launcher-platform/tests/: platform.rs
apps/launcher/src/: main.rs
apps/web/: package.json
clipper/: README.md  brand-capture.js  content.js
data/: contributor-card-state.json
design-templates/orbit-github/: SKILL.md
docs/i18n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja-JP.md  README.ko.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.zh-CN.md  README.zh-TW.md
e2e/: package.json
e2e/lib/: amr.ts
e2e/tests/: packaged-smoke-workflow.test.ts
e2e/ui/: amr-onboarding.test.ts  amr-run-failure-recovery.test.ts  app-manual-edit.test.ts  app.test.ts  entry-chrome-flows.test.ts  home-hero-rail.test.ts  project-management-flows.test.ts  real-daemon-run.test.ts  (+1 more)
scripts/: bake-plugin-previews.mjs  check-cross-app-imports.test.ts  check-cross-app-imports.ts  scopes.ts
(+220 files in other folders)
